# 9-Risk-MAS

./: .gitignore  CODE_SKELETON.md  LICENSE  PPT_SKELETON.md  PRACTICE.md  README.md  USER_INPUTS.md  intent_positions.csv  post_risk_positions.csv  practice.md  pyproject.toml  test.py  框架图说明_v2.md
.gitea/workflows/: ci.yml
cufel_practice_data/: README.md  csrc_2025.csv  govcn_2025_results.json  macro_series.yaml  rules.yaml  sampled_etf_basic.csv
skills/compliance-evidence/: SKILL.md  output.schema.json
skills/compliance-evidence/reference/: sample_disclosure.md
skills/liquidity-execution-assessor/: SKILL.md  output.schema.json
skills/macro-tool-calling/: SKILL.md  output.schema.json
skills/risk-market-assessor/: SKILL.md  examples.json  output.schema.json
skills/schemas/: common_io.schema.json
skills/snippets/: decision_rubric.md  evidence_rules.md
skills/supervisor-router/: SKILL.md  output.schema.json
skills/tools/: tool_interfaces.yaml
src/: __init__.py  app.py  config.py  graph.py  mas.py  skills_runtime.py  state.py
src/agents/: __init__.py  agent_utils.py  compliance_agent.py  macro_agent.py  prompts.py
src/chains/: __init__.py  common.py  concentration.py  diversification.py  formatter.py  gatekeeper.py  liquidity.py  market.py  reducer.py  router.py  supervisor.py
src/tools/: __init__.py  audit.py  calibrate_macro_series.py  calibrate_rules.py  constraints.py  csv_data.py  data_quality.py  decision.py  rules.py  snapshot.py  solver.py  utils.py  validate.py
